[package]
name = "redis-by-rust"
version = "0.4.0"
authors = ["Rkrisanoff"]
edition = "2021"

[dependencies]
log = "0.4"
anyhow = "1.0.59"                                   # error handling

bytes = "1.3.0"                                     # helps manage buffers
thiserror = "1.0.32"                                # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking

[dev-dependencies]
tempdir = "0.3"
